--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.4",
     "next": "12.1.2",
     "postcss": "^8.4.12",
     "react": "18.0.0",
@@ -17,8 +18,6 @@
   "devDependencies": {
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
-    "tailwindcss": "^3.0.23",
-    "postcss": "^8.4.12",
-    "auto-prefixer": "^10.4.4"
+    "tailwindcss": "^3.0.23"
   }
 }
