--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.4",
+    
     "next": "12.1.2",
-    "postcss": "^8.4.12",
+    
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12"
   }
 }
