--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
+  "homepage": "https://marticorbalan.github.io/web-personal/",
   "name": "projecte1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "gh-pages": "^3.2.3",
     "next": "12.1.2",
-    
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
-    "tailwindcss": "^3.0.23",
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12"
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
