--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "framer-motion": "6.2.9",
     "gh-pages": "^3.2.3",
     "next": "12.1.2",
     "react": "18.0.0",
